Configure environment variables and deployment settings for all services